--- a/css/medium.css
+++ b/css/medium.css
@@ -7,6 +7,6 @@
 
   nav button {display: none;}
   nav ul {display: block;}
-  nav li {width: 25%; float: right}
+  nav li {width: 25%; float: left}
   
 }
